# SpecGo

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  setup.py
specgo/: __init__.py  __main__.py
specgo/agent/: budget.py  config.py  runner.py  state.py
specgo/agent/steps/: __init__.py  ingest.py  iterate.py  report.py  validate.py
specgo/agent/tools/: ingest_tool.py  replay_tool.py  report_tool.py  test_tool.py
specgo/api_spec/: __init__.py  model.py
specgo/cli/: __init__.py  main.py
specgo/cli/commands/: config.py  gate_test.py  spec_validate.py  start.py  test_diff.py  test_roundtrip.py
specgo/codegen/: __init__.py  naming.py  render.py
specgo/codegen/templates/c/: protocol.c.j2
specgo/gates/: __init__.py  evaluator.py  io.py
specgo/ingest/: dispatcher.py  text.py
specgo/ir/: __init__.py  io.py  model.py
specgo/ir/validator/: __init__.py
specgo/llm/: __init__.py  provider.py
specgo/llm/actions/: __init__.py
specgo/llm/prompts/: __init__.py  ir_fix.md
specgo/replay/: __init__.py  model.py  record.py  run.py
specgo/report/: generate.py
specgo/testgen/: __init__.py  property.py
specgo/testgen/raw/: __init__.py  runner.py
specgo/testgen/tests/: test_roundtrip_property.py
specgo/workspace/: __init__.py  layout.py
src/specgo/agent/: __init__.py
src/specgo/agent/steps/: gates.py  test_diff.py
src/specgo/agent/tools/: __init__.py  validate_tool.py
src/specgo/api_spec/: validator.py
src/specgo/cli/: default_paths.py
src/specgo/cli/commands/: __init__.py  codegen_protocol.py  gate_codegen.py  run.py  (+1 more)
src/specgo/codegen/: api.py  platform.py  protocol.py
src/specgo/gates/: codegen.py  metrics.py
src/specgo/ingest/: __init__.py  dbc.py  pdf.py
src/specgo/llm/: placeholder.py
src/specgo/report/: __init__.py
src/specgo/testgen/: harness.py
src/specgo/workspace/: bootstrap.py  config_model.py  store.py
tests/: README  template_broken_parser_demo.c  template_invalid_semantic_sanitized.dbc  template_roundtrip_mismatch_sanitized.dbc  template_valid_sanitized.dbc
tests/roundtrip_mismatch_artifacts/: template_roundtrip_mismatch_sanitized_protocol.c  template_roundtrip_mismatch_sanitized_protocol.h
(+10 files in other folders)
